# intelligentdata-python

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
intelligentdata/: __init__.py  auth.py  client.py  exceptions.py  models.py
