[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intelligentdata"
version = "0.1.0"
description = "Python SDK for the Intelligent Data API by apexanalytix"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "apexanalytix", email = "support@apexanalytix.com" }]
keywords = ["api", "validation", "enrichment", "sanctions", "intelligent-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://portal.smartvmapi.com"
Documentation = "https://portal.smartvmapi.com/docs"
Repository = "https://github.com/apexanalytix/intelligentdata-python"
